Created interface for model class and redid service controllers to work with this models